--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     <li><a href="{{ site.baseurl }}/#services">Services</a></li>
     <li><a href="{{ site.baseurl }}/#work">Our Work</a></li>
     <li><a href="{{ site.baseurl }}/about/">About</a></li>
-    <li><a href="{{ site.baseurl }}/about/">Blog</a></li>
+    <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
     <li><a href="{{ site.baseurl }}//#quoteForm">Free Quote</a></li>
   </ul>
 </header>     
