--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,10 @@
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
+    
+<DIV ID="footer">
+    <A HREF="tel:386-747-5367"><i class="fas fa-phone" STYLE="opacity:.5;margin-right:5px;"></i> CALL NOW<SPAN>: 386.747.5367</SPAN></A>
+</DIV>
 
     <div class="wrapper-footer">
       <div class="container">
