--- a/style.scss
+++ b/style.scss
@@ -450,6 +450,7 @@ img {max-width: 100%;}
 }
 @media only screen and (max-width: 768px) {
     .menu > li > a {background: #A61A1C}
+}
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
