--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ img {max-width: 100%;}
 #work {margin: auto; text-align: center;}
 #services {font-size: 18px;padding: 0px 0px 50px;}
 #services > ul {list-style: none; margin: 0px; padding: 0px;}
-#services > ul > li {background: url('images/check.png') no-repeat left top;padding:0px 0px 0px 25px; margin: 0px 0px 8px 0px;}
-.hero {height: 230px;background:#C61E21 url('images/bg1.png'); background-size: cover;}
-#aboutUsHero {background:#105aff url('images/bg2.jpg')!important; }
+#services > ul > li {background: url('/images/check.png') no-repeat left top;padding:0px 0px 0px 25px; margin: 0px 0px 8px 0px;}
+.hero {height: 230px;background:#C61E21 url('/images/bg1.png'); background-size: cover;}
+#aboutUsHero {background:#105aff url('/images/bg2.jpg')!important; }
 #slogan {color:#fff; font-size: 34px; text-align: center;padding: 75px 25px 0px;}
 #slogan > div {font-size: 14px; text-transform: uppercase; letter-spacing: 2px; line-height: 24px; margin:10px 0px 0px 0px;}
 .mainContainer {padding: 20px;max-width: 1200px; margin:auto;}
