--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       
       
 <header ID="home" class="header">
-  <a href="href="{{ site.baseurl }}/"" class="logo"><IMG SRC="/images/logo.svg">Hoosi</a>
+  <a href="{{ site.baseurl }}" class="logo"><IMG SRC="/images/logo.svg">Hoosi</a>
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
