--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<DIV CLASS="hero" ID="aboutUsHero">
+    <DIV ID="slogan">
+        Bloomington, Indiana Web Design Blog
+        <div></div>
+    </DIV>    
+</DIV>
+
 <article class="post">
   <h1>{{ page.title }}</h1>
 
