--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {margin: 0px;padding: 0px;font-size: 16px;font-family: 'Montserrat', sans-serif;}
+a {color:#C6302D;}
+.post {padding:20px;}
 .mobileHide {display: none;}
 #testi {list-style: none; padding: 0px; margin: 0px;}
 #testi > li {margin-bottom: 35px;}
