--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ img {max-width: 100%;}
 }
 
 .header .menu-btn:checked ~ .menu {
-  max-height: 240px;
+  max-height: 100%;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
