--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,18 @@
 
      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+      <script src="{{site.baseurl}}jquery.js"></script> 
+        <script>
+            $(document).ready(function () {
+                $(window).scroll(function () {
+                    if ($(document).scrollTop() > 50) {
+                        $(".header").addClass("scrolled");
+                    } else {
+                        $(".header").removeClass("scrolled");
+                    }
+                });
+            });
+        </script>
   </head>
 
   <body>
