--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
     <li><a href="{{ site.baseurl }}/#work">Our Work</a></li>
     <li><a href="{{ site.baseurl }}/about/">About</a></li>
     <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-    <li><a href="{{ site.baseurl }}//pricing/">Pricing</a></li>
+    <li><a href="{{ site.baseurl }}/pricing/">Pricing</a></li>
   </ul>
 </header>     
 
