--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ img {max-width: 100%;}
   transition: all .2s ease-out;
 }
 
-.menu > li > a:hover {background-color: rgba(0, 0, 0, 1);}
+.menu > li > a:hover {border-bottom:2px solid rgba(255, 255, 255, .5);}
 
 .logo {
   display: block;
