--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ img {max-width: 100%;}
 .button {border-radius: 500px; text-decoration: none; background:#0EB4FF; color:#fff; display: inline; height: 40px; padding: 10px 20px; 
     box-sizing: border-box; left:auto; text-align: center; margin: 20px auto 0px;}
 .button:hover {background:#006FEF;transition: all .2s ease-out; }
+.topPad {padding-top:30px;}
+.center {text-align: center;}
 .header {
   position: fixed;
   top:0px;
