--- a/style.css
+++ b/style.css
@@ -164,5 +164,5 @@ img {max-width: 100%;}
     #linkIn {width: 350px; margin: 0px auto 20px;}
 }
 @media only screen and (max-width: 768px) {
-    .menu > li > a {background: #A61A1C}
+    .menu {background: #A61A1C}
 }
