--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,6 @@
                 });
             });
         </script>
-      <script type="text/javascript">
-        var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || 
-        {widgetcode:"a4d45a876880b7814599f741d906fbdb99066528d50c9214b04b4ae55e3deee05d5fe629768af6d9a03793700d9418c2", values:{},ready:function(){}};
-        var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
-        s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
-       </script>
   </head>
 
   <body>
@@ -62,7 +56,7 @@
     </div>
     
 <DIV ID="footer">
-    <A HREF="tel:386-747-5367"><i class="fas fa-phone" STYLE="opacity:.5;margin-right:5px;"></i> CALL NOW<SPAN>: 386.747.5367</SPAN></A>
+    <A HREF="{{ site.baseurl }}/pricing/"><i class="fas fa-chevron-right" STYLE="opacity:.5;margin-right:5px;"></i> Get Started</SPAN></A>
 </DIV>
 
     <div class="wrapper-footer">
