--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,9 +55,9 @@
       {{ content }}
     </div>
     
-<DIV ID="footer">
-    <A HREF="tel:386-747-5367"><i class="fas fa-phone" STYLE="opacity:.5;margin-right:5px;"></i> CALL NOW<SPAN>: 386.747.5367</SPAN></A>
-</DIV>
+
+    <A ID="footer" HREF="tel:386-747-5367"><i class="fas fa-chevron-right" STYLE="opacity:.5;margin-right:5px;"></i> Get Started Today</SPAN></A>
+
 
     <div class="wrapper-footer">
       <div class="container">
