--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {margin: 0px;padding: 0px;font-size: 16px;font-family: 'Montserrat', sans-serif;}
-a {color:#C6302D;}
+a {color:#25B5FC; text-decoration: none;}
 .post {padding:20px; max-width: 800px; margin:auto;}
 .mobileHide {display: none;}
 #testi {list-style: none; padding: 0px; margin: 0px;}
@@ -18,11 +18,10 @@ img {max-width: 100%;}
 #slogan {color:#fff; font-size: 34px; text-align: center;padding: 75px 25px 0px;}
 #slogan > div {font-size: 14px; text-transform: uppercase; letter-spacing: 2px; line-height: 24px; margin:10px 0px 0px 0px;}
 .mainContainer {padding: 20px;max-width: 1200px; margin:auto;}
-#footer {background:#0EB4FF; text-align: center; font-weight: bold; position: fixed; bottom: 0px; left:0px; right:0px;padding: 5px;}
-#footer > a {color:#fff;text-decoration: none; letter-spacing: 1px;}
+#footer:hover {background:#006FEF;transition: all .2s ease-out; }
+#footer {transition: all .2s ease-out;background:#0EB4FF; text-align: center; color:#fff;text-decoration: none; letter-spacing: 1px; font-weight: bold; position: fixed; bottom: 0px; left:0px; right:0px;padding: 5px;}
 #footer > a > span {display: none;}
-.button {border-radius: 500px; text-decoration: none; background:#0EB4FF; color:#fff; display: inline; height: 40px; padding: 10px 20px; 
-    box-sizing: border-box; left:auto; text-align: center; margin: 20px auto 0px; transition: all .2s ease-out;}
+.button {border-radius: 500px; text-decoration: none; background:#0EB4FF; color:#fff; display: inline; height: 40px; padding: 10px 20px; box-sizing: border-box; left:auto; text-align: center; margin: 20px auto 0px; transition: all .2s ease-out;}
 .button:hover {background:#006FEF;transition: all .2s ease-out; }
 .topPad {padding-top:30px;}
 .center {text-align: center;}
@@ -159,8 +158,7 @@ img {max-width: 100%;}
   #quoteForm {width: 100%;height: 1120px;}
     #slogan {padding: 100px 0px 0px 0px; font-size: 42px;}
     #services {padding: 0px 0px 40px;}
-    #footer {width:180px; right:10px; bottom:10px; height: 40px; padding: 10px; box-sizing: border-box; left:auto; text-align: center; border-radius: 500px;}
-    #footer > a > span {display: inline-block; font-weight: normal;}
+    #footer {width:230px; right:10px; bottom:10px; height: 40px; padding: 10px; box-sizing: border-box; left:auto; text-align: center; border-radius: 500px;}
     #linkIn {width: 350px; margin: 0px auto 20px;}
 }
 @media only screen and (max-width: 768px) {
