--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background:#f1f1f1;margin: 0px;padding: 0px;font-size: 16px;font-family: 'Montserrat', sans-serif; transition: all .2s ease-out;}
+body {background:#f1f1f1;margin: 0px;padding: 0px 0px 60px 0px;font-size: 16px;font-family: 'Montserrat', sans-serif; transition: all .2s ease-out;}
 a {color:#25B5FC; text-decoration: none;}
 a:hover {color:#006FEF; text-decoration: underline; transition: all .2s ease-out; }
 .post {padding:20px; max-width: 800px; margin:auto;}
