--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ img {max-width: 100%;}
   color:#fff;
   font-weight: bold;
 }
+.logo:hover {color:#fff; text-decoration: none;}
 .logo > img {height: 24px; display: inline-block;opacity: .5; margin: 0px 4px 0px 0px;}
 
 /* menu */
