--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
     
 
 
-    <A ID="footer" HREF="{{ site.baseurl }}/pricing/"><i class="fas fa-chevron-right" STYLE="opacity:.5;margin-right:5px;"></i>Get Started Today</A>
+    <A ID="footer" HREF="{{ site.baseurl }}/pricing/"><i class="fas fa-chevron-right"></i>Get Started Today</A>
 
 
 
